# LanClip

./: Cargo.toml  README.md  build.rs
proto/: message.proto
src/: main.rs
src/client/: client.rs  mod.rs
src/clipboard/: common.rs  mac.rs  mod.rs
src/listener/: follower.rs  listener.rs  mod.rs
src/server/: server.rs
