[package]
name = "LanClip"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.6.0"
clap = { version = "4.5.41", features = ["derive"] }
clipboard-master = "=4.0.0-beta.6"
once_cell = "1.21.3"
prost = "0.13.5"
tokio = { version = "1.46.1", features = ["full"] }
tonic = "0.13.1"
uuid = { version = "1.17.0", features = ["v4"] }
[build-dependencies]
tonic-build = "0.13.1"
